# sm-checkers

./: Cargo.toml  README.md
.github/workflows/: rust.yml
cb-sm-cherckers-engine/: Cargo.toml
cb-sm-cherckers-engine/src/: lib.rs
cb_sm_cherckers_engine/: Cargo.toml
cb_sm_cherckers_engine/src/: cb_helpers.rs  lib.rs
sm_checkers_base/: Cargo.toml
sm_checkers_base/src/: checkers_board.rs  checkers_rules.rs  lib.rs  movements.rs  player_colors.rs
sm_checkers_players/: Cargo.toml
sm_checkers_players/src/: lib.rs  player_actions.rs  player_bot_ai.rs  player_bot_random.rs  player_human_console.rs  player_trait.rs
src/: board.rs  board_content.rs  checkers_board.rs  checkers_game.rs  checkers_rules.rs  checkers_ui.rs  checkers_ui_text.rs  cyclic_iterator.rs  game_actions.rs  main.rs  move_piece.rs  movements.rs  observer.rs  player_bot_ai.rs  player_bot_random.rs  player_human_console.rs  player_trait.rs
src/.github/workflows/: rust.yml
